services/foundry-vtt/allen/app/patches/deployment-environment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry-vtt
spec:
  template:
    spec:
      containers:
        - name: foundryvtt-web
          # https://hub.docker.com/r/felddy/foundryvtt#environment-variables
