services/foundry-vtt/allen/app/patches/httproute-external-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-vtt-external
spec:
  hostnames:
    - allen.foundry-vtt.wildfreddy.fivebytestudios.com
